HAWQ-1315. Function validateResourcePoolStatus() in resourcepool.c is logging the wrong information